--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-description = "Just your casual name-squatting crate. I'll be doing something fun with it later."
+authors = ["cyqsimon"]
+description = "Making Rust a true modern language™️ with revolutionary macros."
 edition = "2021"
 license = "MIT"
 name = "zoomer"
-version = "0.1.0"
+version = "0.1.1"
 
 [dependencies]
